--- a/index.html
+++ b/index.html
@@ -58,4 +58,8 @@
 
         // Capture photo when button is clicked
         captureButton.addEventListener('click', function () {
-            context.drawImage(videoElement, 0, 0
+            context.drawImage(videoElement, 0, 0, canvas.width, canvas.height);
+        });
+    </script>
+</body>
+</html>
